--- a/nextjs-blog/styles/globals.css
+++ b/nextjs-blog/styles/globals.css
@@ -6,6 +6,7 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  --a-color-rgb: red;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -24,4 +25,18 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+  font-size: 18px;
+}
+* {
+  box-sizing: border-box;
+}
+a {
+  color: var(--a-color-rgb);
+}
+a:hover {
+  text-decoration: underline;
+}
+img {
+  max-width: 100%;
+  display: block;
 }
